syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/EmilioCliff/payment-polling-app/authentication-service/pb";

message User {
    string fullname = 1;
    string email = 2;
    string password = 3;
    string access_token = 4;
    google.protobuf.Timestamp created_at = 5;
}
